@@ -19,16 +19,22 @@
 package org.apache.hcatalog.mapreduce;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.metastore.HiveMetaStoreClient;
 import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.thrift.DelegationTokenSelector;
 import org.apache.hadoop.io.Text;
+import org.apache.hadoop.mapred.JobTracker;
 import org.apache.hadoop.mapreduce.Job;
+import org.apache.hadoop.mapreduce.JobContext;
 import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.hadoop.security.token.Token;
 import org.apache.hadoop.security.token.TokenIdentifier;
@@ -39,21 +45,39 @@ import org.apache.hcatalog.common.HCatUtil;
 import org.apache.thrift.TException;
 
 final class Security {
+
+  private static final Log LOG = LogFactory.getLog(HCatOutputFormat.class);
   
   // making sure this is not initialized unless needed
   private static final class LazyHolder {
     public static final Security INSTANCE = new Security();
   }
 
-  private static Map<String, Token<? extends AbstractDelegationTokenIdentifier>> tokenMap = new HashMap<String, Token<? extends AbstractDelegationTokenIdentifier>>();
-  
   public static Security getInstance() {
     return LazyHolder.INSTANCE;
   }
 
+  boolean isSecurityEnabled() {
+      try {
+          Method m = UserGroupInformation.class.getMethod("isSecurityEnabled");
+          return (Boolean)m.invoke(null, (Object[])null);
+      } catch (NoSuchMethodException e) {
+          LOG.info("Security is not supported by this version of hadoop.", e);
+      } catch (InvocationTargetException e) {
+          String msg = "Failed to call isSecurityEnabled()";
+          LOG.info(msg, e);
+          throw new IllegalStateException(msg,e);
+      } catch (IllegalAccessException e) {
+          String msg = "Failed to call isSecurityEnabled()";
+          LOG.info(msg, e);
+          throw new IllegalStateException(msg,e);
+      }
+      return false;
+  }
+
   // a signature string to associate with a HCatTableInfo - essentially
   // a concatenation of dbname, tablename and partition keyvalues.
-  private String getTokenSignature(OutputJobInfo outputJobInfo) {
+  String getTokenSignature(OutputJobInfo outputJobInfo) {
     StringBuilder result = new StringBuilder("");
     String dbName = outputJobInfo.getDatabaseName();
     if(dbName != null) {
@@ -61,13 +85,17 @@ final class Security {
     }
     String tableName = outputJobInfo.getTableName();
     if(tableName != null) {
-      result.append("+" + tableName);
+      result.append("." + tableName);
     }
     Map<String, String> partValues = outputJobInfo.getPartitionValues();
     if(partValues != null) {
       for(Entry<String, String> entry: partValues.entrySet()) {
-        result.append("+" + entry.getKey() + "=" + entry.getValue());
+        result.append("/");
+        result.append(entry.getKey());
+        result.append("=");
+        result.append(entry.getValue());
       }
+
     }
     return result.toString();
   }
@@ -82,22 +110,14 @@ final class Security {
     if(UserGroupInformation.isSecurityEnabled()){
       UserGroupInformation ugi = UserGroupInformation.getCurrentUser();
       // check if oozie has set up a hcat deleg. token - if so use it
-      TokenSelector<? extends TokenIdentifier> tokenSelector = new DelegationTokenSelector();
-      // TODO: will oozie use a "service" called "oozie" - then instead of
-      // new Text() do new Text("oozie") below - if this change is made also
-      // remember to do:
-      //  job.getConfiguration().set(HCAT_KEY_TOKEN_SIGNATURE, "oozie");
-      // Also change code in OutputCommitter.cleanupJob() to cancel the
-      // token only if token.service is not "oozie" - remove the condition of
-      // HCAT_KEY_TOKEN_SIGNATURE != null in that code.
-      Token<? extends TokenIdentifier> token = tokenSelector.selectToken(
-          new Text(), ugi.getTokens());
-      if(token != null) {
-  
-        job.getCredentials().addToken(new Text(ugi.getUserName()),token);
-  
-      } else {
-  
+      TokenSelector<? extends TokenIdentifier> hiveTokenSelector = new DelegationTokenSelector();
+      //Oozie does not change the service field of the token
+      //hence by default token generation will have a value of "new Text("")"
+      //HiveClient will look for a use TokenSelector.selectToken() with service
+      //set to empty "Text" if hive.metastore.token.signature property is set to null
+      Token<? extends TokenIdentifier> hiveToken = hiveTokenSelector.selectToken(
+        new Text(), ugi.getTokens());
+      if(hiveToken == null) {
         // we did not get token set up by oozie, let's get them ourselves here.
         // we essentially get a token per unique Output HCatTableInfo - this is
         // done because through Pig, setOutput() method is called multiple times
@@ -110,47 +130,51 @@ final class Security {
         // TableInfo, we can have as many tokens as there are stores and the TokenSelector
         // will correctly pick the right tokens which the committer will use and
         // cancel.
-        
         String tokenSignature = getTokenSignature(outputJobInfo);
-        if(tokenMap.get(tokenSignature) == null) {
-          // get delegation tokens from hcat server and store them into the "job"
-          // These will be used in to publish partitions to
-          // hcat normally in OutputCommitter.commitJob()
-          // when the JobTracker in Hadoop MapReduce starts supporting renewal of 
-          // arbitrary tokens, the renewer should be the principal of the JobTracker
-          tokenMap.put(tokenSignature, HCatUtil.extractThriftToken(
-              client.getDelegationToken(ugi.getUserName()),
-              tokenSignature));
-        }
-  
-        String jcTokenSignature = "jc."+tokenSignature;
+        // get delegation tokens from hcat server and store them into the "job"
+        // These will be used in to publish partitions to
+        // hcat normally in OutputCommitter.commitJob()
+        // when the JobTracker in Hadoop MapReduce starts supporting renewal of
+        // arbitrary tokens, the renewer should be the principal of the JobTracker
+        hiveToken = HCatUtil.extractThriftToken(client.getDelegationToken(ugi.getUserName()), tokenSignature);
+
         if (harRequested){
-          if(tokenMap.get(jcTokenSignature) == null) {
-            tokenMap.put(jcTokenSignature,
+          TokenSelector<? extends TokenIdentifier> jtTokenSelector =
+            new org.apache.hadoop.mapreduce.security.token.delegation.DelegationTokenSelector();
+          Token jtToken =
+            jtTokenSelector.selectToken(org.apache.hadoop.security.SecurityUtil.buildTokenService(JobTracker.getAddress(conf)),
+                                            ugi.getTokens());
+          if(jtToken == null) {
+            //we don't need to cancel this token as the TokenRenewer for JT tokens
+            //takes care of cancelling them
+            job.getCredentials().addToken(new Text("hcat jt token"),
                 HCatUtil.getJobTrackerDelegationToken(conf,ugi.getUserName()));
           }
         }
         
-        job.getCredentials().addToken(new Text(ugi.getUserName() + tokenSignature),
-            tokenMap.get(tokenSignature));
+        job.getCredentials().addToken(new Text(ugi.getUserName() +"_"+ tokenSignature), hiveToken);
         // this will be used by the outputcommitter to pass on to the metastore client
         // which in turn will pass on to the TokenSelector so that it can select
         // the right token.
         job.getConfiguration().set(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE, tokenSignature);
-  
-        if (harRequested){
-          job.getCredentials().addToken(new Text(ugi.getUserName() + jcTokenSignature),
-              tokenMap.get(jcTokenSignature));
-  
-          job.getConfiguration().set(
-              HCatConstants.HCAT_KEY_JOBCLIENT_TOKEN_SIGNATURE, jcTokenSignature);
-          job.getConfiguration().set(
-              HCatConstants.HCAT_KEY_JOBCLIENT_TOKEN_STRFORM, 
-              tokenMap.get(jcTokenSignature).encodeToUrlString());
-          //          LOG.info("Set hive dt["+tokenSignature+"]");
-          //          LOG.info("Set jt dt["+jcTokenSignature+"]");
-        }
       }
+    }
   }
+
+  // we should cancel hcat token if it was acquired by hcat
+  // and not if it was supplied (ie Oozie). In the latter
+  // case the HCAT_KEY_TOKEN_SIGNATURE property in the conf will not be set
+  void cancelToken(HiveMetaStoreClient client, JobContext context) throws IOException, MetaException {
+    String tokenStrForm = client.getTokenStrForm();
+    if(tokenStrForm != null && context.getConfiguration().get(HCatConstants.HCAT_KEY_TOKEN_SIGNATURE) != null) {
+      try {
+        client.cancelDelegationToken(tokenStrForm);
+      } catch (TException e) {
+        String msg = "Failed to cancel delegation token";
+        LOG.error(msg,e);
+        throw new IOException(msg,e);
+      }
+    }
   }
+
 }
